update json file and readme file

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "comp125-m2020-lesson6",
+  "name": "assignment3",
   "version": "1.0.0",
-  "description": "Demo Site for COMP125",
+  "description": "Demo Site for assignment 3",
   "main": "index.js",
   "author": "Heesoo Lim",
   "license": "MIT",
